samples/_failures_safe/1761529980_965354_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3da2a0f3.c: In function ‘main’:
./samples/SAFE/__tmp_3da2a0f3.c:158:20: error: expected ‘]’ at end of input
  158 |         input[len-1
      |                    ^
      |                    ]
./samples/SAFE/__tmp_3da2a0f3.c:158:9: error: expected declaration or statement at end of input
  158 |         input[len-1
      |         ^~~~~
./samples/SAFE/__tmp_3da2a0f3.c:158:9: error: expected declaration or statement at end of input
